package utiil;

public interface ReprodutorMusical {
    abstract void tocar();

    abstract void pausar();

    abstract void trocarMusica(String musica);
}
